--- a/partials/nav.html
+++ b/partials/nav.html
@@ -1,21 +1,13 @@
-        <h1><a href="index.html">STEFANO PASSERI</a></h1>
-        <hr />
+<h1><a href="/portfolio-site/index.html">STEFANO PASSERI</a></h1>
+<hr />
 
+<ul class="project-list">
+  <li><a href="/portfolio-site/projects/torus.html">Torus</a></li>
+  <li><a href="/portfolio-site/projects/characters.html">Characters</a></li>
+  <li><a href="/portfolio-site/projects/mask.html">Mask</a></li>
+  <li><a href="/portfolio-site/projects/mirrors.html">Mirrors</a></li>
+</ul>
 
-        <ul class="project-list">
-          <!-- <li><a href="#">Devices</a></li> -->
-          <!-- <li><a href="#">Surveys</a></li> -->
-          <li><a href="projects/torus.html">Torus</a></li>
-          <li><a href="projects/characters.html">Characters</a></li>
-          <li><a href="projects/mask.html">Mask</a></li>
-          <li><a href="projects/mirrors.html">Mirrors</a></li>
-          <!-- <li><a href="#">Grids</a></li> -->
-          <!-- <li><a href="#">Scribbles</a></li> -->
-
-        </ul>
-
-        <a href="archive.html" class="archive-link">Archive</a>
-
-        <hr />
-
-        <a href="about.html" class="about-link">About</a>
+<a href="/portfolio-site/archive.html" class="archive-link">Archive</a>
+<hr />
+<a href="/portfolio-site/about.html" class="about-link">About</a>
